# dnssd-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: callback.rs  ffi.rs  general.rs  lib.rs  record.rs  service.rs  txtrecord.rs  utils.rs
